Update the name of the project to strez

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "android-ios-string-resource-converter"
+name = "strez"
 version = "0.1.0"
 authors = ["Seth Lopez <seth@dynamit.com>"]
 
