Update Cargo with clap dependency and additional meta information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "strez"
 version = "0.1.0"
-authors = ["Seth Lopez <seth@dynamit.com>"]
+authors = ["Seth Lopez <sethlopezme@users.noreply.github.com>"]
+homepage = "https://github.com/sethlopezme/strez"
+repository = "https://github.com/sethlopezme/strez"
 
 [dependencies]
+clap = { version = "~2.10.0", features = ["yaml"] }
