--- a/src/usage/en.yml
+++ b/src/usage/en.yml
@@ -6,13 +6,11 @@ settings:
 
 args:
   - default-language:
-      help: Set the default language code. Defaults to the first defined language.
+      help: Set the default language code.
       short: l
       long: default-language
       takes_value: true
       max_values: 1
-      conflicts_with:
-        - no-default-language
   - directory:
       help: Set the output directory.
       short: d
@@ -30,11 +28,6 @@ args:
       long: name
       takes_value: true
       max_values: 1
-  - no-default-language:
-      help: Output the default language to the appropriate language directory.
-      long: no-default-language
-      conflicts_with:
-        - default-language
   - source-format:
       help: Set the input format.
       short: s
