--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ homepage = "https://github.com/sethlopezme/strez"
 repository = "https://github.com/sethlopezme/strez"
 
 [dependencies]
-clap = { version = "~2.18.0", features = ["yaml"] }
+clap = { version = "2", features = ["yaml"] }
 csv = "~0.14.7"
