Hide the format arg for now and add an alias for the platform arg

--- a/src/usage/en.yml
+++ b/src/usage/en.yml
@@ -14,6 +14,7 @@ args:
       long: force
   - format:
       help: Sets the input data format
+      hidden: true
       long: format
       takes_value: true
       value_name: format
@@ -23,6 +24,8 @@ args:
   - platform:
       help: Sets the platform(s) (comma-delimited)
       long: platform
+      aliases:
+        - platforms
       takes_value: true
       value_name: platform
       require_delimiter: true
